--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-machine-coding",
-  "homepage": "https://kecav.github.io/react-machine-coding",
+  "homepage": "https://kecav.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
